[gd_scene load_steps=3 format=3 uid="uid://dcgw6mq8lnk21"]

[ext_resource type="Script" path="res://Components/user_interface.gd" id="1_5fvyp"]
[ext_resource type="AudioStream" uid="uid://wvkkoqjrvs6l" path="res://Assets/Music/UI Soundpack/MP3/Retro4.mp3" id="2_n0grq"]

[node name="User Interface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
script = ExtResource("1_5fvyp")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 86.0
offset_bottom = 101.0

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options
"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Click" type="AudioStreamPlayer" parent="VBoxContainer"]
stream = ExtResource("2_n0grq")
volume_db = 2.0

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
